--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
   "author": "harsh jain",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-session-sequelize": "^5.2.2",
     "cookie-parser": "^1.4.3",
-    "crypto": "^1.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "jshashes": "^1.0.7",
     "morgan": "^1.9.0",
-    "mysql": "^2.15.0",
-    "shelljs": "^0.8.1",
+    "mysql2": "^1.6.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^4.39.0",
     "socket.io": "^2.0.4",
     "socket.io-cookie-parser": "^1.0.0"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "sequelize-auto-migrations": "^1.0.2"
   }
 }
