--- a/src/config/config.sample.json
+++ b/src/config/config.sample.json
@@ -11,7 +11,9 @@
 
         "host": "127.0.0.1",
 
-        "dialect": "mysql"
+        "dialect": "mysql",
+
+        "operatorsAliases": false
 
     },
     "production": {
@@ -24,8 +26,9 @@
 
         "host": "127.0.0.1",
 
-        "dialect": "mysql"
+        "dialect": "mysql",
 
+        "operatorsAliases": false
     }
 
 }
