--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.9.0",
     "mysql2": "^1.6.1",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "sequelize": "^4.39.0",
     "socket.io": "^2.0.4",
