--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "harsh jain",
   "license": "MIT",
   "dependencies": {
+    "@mitter-io/models": "^0.5.8",
+    "@mitter-io/node": "^0.5.8-1",
+    "@mitter-io/web": "^0.5.8-1",
     "bcryptjs": "^2.4.3",
     "connect-session-sequelize": "^5.2.2",
     "cookie-parser": "^1.4.3",
@@ -30,6 +33,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
-    "sequelize-auto-migrations": "^1.0.2"
+    "sequelize-auto-migrations": "^1.0.2",
+    "webpack-cli": "^3.1.2"
   }
 }
