--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^1.6.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^4.39.0",
     "socket.io": "^2.0.4",
