--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,11 @@ database=
 facebook_api_key=
 facebook_api_secret=
 callback_url=
+NODE_ENV=
+SECRET=
+website=
+MITTER_APPLICATION_ID=
+MITTER_ACCESS_KEY=
+MITTER_ACCESS_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
