--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coursecare",
+  "name": "Coursecare",
   "version": "1.0.0",
   "description": "a site for collaborative learning",
   "main": "index.js",
