--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@mitter-io/models": "^0.5.8",
     "@mitter-io/node": "^0.5.11-1",
-    "@mitter-io/web": "^0.5.8-1",
+    "@mitter-io/web": "^0.5.10",
     "bcryptjs": "^2.4.3",
     "connect-session-sequelize": "^5.2.2",
     "cookie-parser": "^1.4.3",
